force-app/main/default/objects/Case__c/Case__c.object-meta.xml
<CustomObject>
    <description>Case info</description>
    <label>Case</label>
    <nameField>
        <label>Case</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>