force-app/main/default/objects/Case__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilities</label>
    <referenceTo>Facilities__c</referenceTo>
    <relationshipLabel>Case</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>