force-app/main/default/objects/Case__c/fields/Maintenance_Staff__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Staff</label>
    <referenceTo>Maintenance_Staff__c</referenceTo>
    <relationshipLabel>Case</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>