force-app/main/default/objects/Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>